Update a lot of stuff making omlet breaking eggs